--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(aoc-2024src STATIC
     aoc/days/Day1.cpp
     aoc/days/Day2.cpp
     aoc/days/Day3.cpp
+    aoc/days/Day4.cpp
 
     aoc/input/FileReader.cpp
 )
